--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,10 @@ pytesseract>=0.3.10
 openpyxl>=3.1.0
 xlrd>=2.0.0
 
-
+python-docx
+PyPDF2
+openpyxl
+python-pptx
+paddleocr
+paddlepaddle
+opencv-python-headless
